--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,97 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f3f3f3;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+main {
+  padding: 15px;
+}
+
+/*
+** HEADER 
+*/
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 60px;
+  background: #171717;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25);
+}
+
+.header .title {
+  color: #ffce00;
+  font-size: 28px;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+.header .title span {
+  color: #f3f3f3;
+  font-weight: 300;
+}
+
+/*
+** NOTE FORM
+*/
+
+.noteform {
+  display: block;
+  width: 100%;
+  max-width: 480px;
+  margin: 0 auto 15px;
+}
+.noteform h3 {
+  color: #171717;
+}
+.noteform .form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+/*
+** NOTES LIST
+*/
+.notes {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 15px;
+  padding: 15px;
+}
+.notes .note {
+  background: #ffffff;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.25);
+}
+
+.notes .note .note-title {
+  background: #171717;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.notes .note .note-title h3 {
+  color: #f3f3f3;
+  margin: 0;
+  padding: 0;
+}
+
+.notes .note .note-title .remove {
+  color: #ff0000;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.notes .note .note-content {
+  padding: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .notes {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
